test/tests/stages/18_structures/invalid_types/tag_resolution/incomplete_shadows_complete.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  ;
  struct
  identifier(s)
  *
  identifier(x)
  ;
  identifier(x)
  ->
  identifier(a)
  =
  const int(10)
  ;
  return
  const int(0)
  ;
  }
